showing some of the matches from the api.

--- a/public/index.html
+++ b/public/index.html
@@ -42,41 +42,14 @@
           <button class="tab">Settings</button>
         </nav>
         <section class="matches">
-          <section class="match-day">
+          <!-- <section class="match-day">
             <h3>Friday 16 August 2024</h3>
             <div class="match">
               <div class="team">Man Utd</div>
               <div class="time">15:00</div>
               <div class="team">Fulham</div>
             </div>
-          </section>
-          <section class="match-day">
-            <h3>Saturday 17 August 2024</h3>
-            <div class="match">
-              <div class="team">Ipswich</div>
-              <div class="time">07:30</div>
-              <div class="team">Liverpool</div>
-            </div>
-            <div class="match">
-              <div class="team">Arsenal</div>
-              <div class="time">10:00</div>
-              <div class="team">Wolves</div>
-            </div>
-            <!-- Repeat similar blocks for other matches -->
-          </section>
-          <section class="match-day">
-            <h3>Sunday 18 August 2024</h3>
-            <div class="match">
-              <div class="team">Brentford</div>
-              <div class="time">09:00</div>
-              <div class="team">Crystal Palace</div>
-            </div>
-            <div class="match">
-              <div class="team">Chelsea</div>
-              <div class="time">11:30</div>
-              <div class="team">Man City</div>
-            </div>
-          </section>
+          </section> -->
         </section>
       </main>
       <aside class="bet-slip">
