adding the next and prev button

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@
             </div>
           </section> -->
         </section>
+        <div class="navigation-buttons">
+          <button class="nav-button" id="prev-button">&lt; Previous</button>
+          <button class="nav-button" id="next-button">Next &gt;</button>
+        </div>
       </main>
       <aside class="bet-slip">
         <h2>BET SLIP</h2>
